// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function CodeUri can be set at the function 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs24.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function CodeUri can be set global or at the function 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "CodeUri": "src/my-lambda",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs24.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function CodeUri can be set globally 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "CodeUri": "src/my-lambda",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs24.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Handler can be set at the function 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs24.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Handler can be set global and at function 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "Handler": "app.globalHandler",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs24.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Handler can be set globally 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "Handler": "app.handler",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs24.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set at the function to nodejs20.x 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set at the function to nodejs22.x 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs22.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set at the function to nodejs24.x 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs24.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set global and at function 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "Runtime": "nodejs22.x",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs24.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set globally to nodejs20.x 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "Runtime": "nodejs20.x",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set globally to nodejs22.x 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "Runtime": "nodejs22.x",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set globally to nodejs24.x 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "Runtime": "nodejs24.x",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`It ignores non AWS::Serverless::Function resosurces 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": {
          "FakeResource": {
            "Type": "AWS::FakeResource::NahNah",
          },
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs24.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`JS output files uses outFile parameter 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/index.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "Runtime": "nodejs24.x",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "index.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`When the template is in a subfolder it should match the happy snapshot 1`] = `
{
  "entryPoints": {
    "xxx#MyLambda": "./xxx/src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/xxx/.aws-sam/build/MyLambda",
      "name": "xxx:MyLambda",
      "outFiles": [
        "\${workspaceFolder}/xxx/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": "xxx/.aws-sam/build",
      "entryPointName": "xxx#MyLambda",
      "outFile": "./xxx/.aws-sam/build/MyLambda/app.js",
      "projectKey": "xxx",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "Runtime": "nodejs24.x",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`can be set global and at function 1`] = `
{
  "entryPoints": {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": [
    {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": [
    {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": {
          "Function": {
            "Runtime": "nodejs22.x",
          },
        },
        "Resources": {
          "MyLambda": {
            "Properties": {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs24.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;
